[package]
name = "xv"
version = "0.1.0"
edition = "2021"
authors = ["ekamekam <youremail@example.com>"]
description = "A Rust project for game logic."
license = "MIT"

[dependencies]
glam = "0.16"
serde = { version = "1.0", features = ["derive"] }
postcard = "0.8"
uuid = { version = "1.1", features = ["serde"] }
rayon = "1.5"
