[package]
name = "xv"
version = "0.1.0"
edition = "2021"
authors = ["ekamekam <youremail@example.com>"]
description = "A Rust project for game logic."
license = "MIT"

[dependencies]
glam = { version = "0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
postcard = "1"
uuid = { version = "1.1", features = ["serde"] }
rayon = "1.5"
libc = "0.2"
nix = { version = "0.27", features = ["process", "ptrace"] }

[[example]]
name = "read_game_state"
path = "examples/read_game_state.rs"
