[package]
name = "xv"
version = "0.1.0"
edition = "2021"
authors = ["ekamekam <youremail@example.com>"]
description = "A Rust project for game logic."
license = "MIT"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
postcard = "1.1"
uuid = { version = "1.18", features = ["serde"] }
rayon = "1.10"
